Added path for uploading images
Added path for uploading product images

--- a/config/gateway.config.yml
+++ b/config/gateway.config.yml
@@ -6,7 +6,7 @@ admin:
 apiEndpoints:
   products:
     host: "*"
-    paths: ["/products", "/products/*"]
+    paths: ["/products", "/products/*", "/uploadImage"]
   authentication:
     host: "*"
     paths: ["/auth/*"]
