--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "coffaine-api-gateway",
-  "description": "Express Gateway Instance Bootstraped from Command Line",
-  "repository": {},
-  "license": "UNLICENSED",
-  "version": "1.0.0",
-  "main": "server.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "express-gateway": "^1.16.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.10"
-  }
+    "name": "coffaine-api-gateway",
+    "description": "Express Gateway Instance Bootstraped from Command Line",
+    "repository": {},
+    "license": "UNLICENSED",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "node -r dotenv/config server.js dotenv_config_path=.env"
+    },
+    "dependencies": {
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-gateway": "^1.16.10"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/node": "^7.12.10",
+        "@babel/preset-env": "^7.12.10"
+    }
 }
