--- a/config/gateway.config.yml
+++ b/config/gateway.config.yml
@@ -6,7 +6,7 @@ admin:
 apiEndpoints:
   products:
     host: "*"
-    paths: ["/products", "/products/*", "/uploadImage"]
+    paths: ["/products", "/products/*","products-several" "/uploadImage"]
   authentication:
     host: "*"
     paths: ["/auth/*"]
